--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
   <body>
     <div class="page">
       <header class="header">
-        <h2 class="header__title"></h2>
-        [Шапка страницы]
+        <h2 class="header__title">[Шапка страницы]</h2>
       </header>
       <main class="content">
         <section class="main">
